tests/invalid/clash_of_name_of_fields_and_symbols.ri
struct Xyz {
    a: int;

    func a() {}
}